# push_swap

./: .gitignore  CMakeLists.txt  Makefile  README.md  checker
checker/: Makefile  checker
checker/includes/: push_swap.h
checker/srcs/: actions.c  get_next_line.c  main.c  put_past_pointers.c
checkerDir/includes/: push_swap.h
checkerDir/srcs/: actions.c  exception.c  get_last.c  get_next_line.c  main.c  parse_functions.c  printLinkedList.c  push_back.c  utils.c
includes/: exception.h  push_swap.h
libft/: Makefile
libft/includes/: libft.h
libft/srcs/: ft_strlen.c
libft/srcs/bonus_part/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
libft/srcs/first_part/: ft_atoi.c  ft_memcpy.c  ft_strdup.c  ft_strncmp.c
libft/srcs/second_part/: ft_split.c  ft_strjoin.c  ft_substr.c
srcs/: actions.c  big_sort.c  exception.c  get_next_line.c  insert_to_b.c  little_sort.c  little_sort_reverse.c  main.c  parse_functions.c  push_from_a_to_b.c  push_stack_b.c  sort_five_and_four_nums.c  sort_one_hundred_nums.c  utils.c
srcs/lists/: find_max_value.c  find_min_value.c  find_put_ind.c  getLast.c  get_nth.c  listLength.c  list_length.c  printLinkedList.c  pushBack.c  put_indexes.c  put_past_pointers.c
